Fix main width (delete horizontal scroll)

--- a/styles.css
+++ b/styles.css
@@ -6,6 +6,7 @@
 body {
   display: flex;
   height: 100vh;
+  width: 100vw;
   margin: 0;
   font-family: sans-serif;
   font-size: 16px;
@@ -56,8 +57,6 @@ aside {
 }
 
 main {
-  display: flex;
-  flex-direction: column;
   flex: 3;
   max-width: 1000px;
   overflow: auto;
@@ -79,7 +78,7 @@ main {
   display: block;
   width: 100%;
   margin-left: -40px;
-  padding: 20px 40px 20px;
+  padding: 20px 0 20px 40px;
   background-color: white;
   box-shadow: 0 3px 7px rgba(0, 0, 0, 0.5);
   margin-bottom: 40px;
